--- a/package.json
+++ b/package.json
@@ -35,15 +35,14 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/dom": "^8.20.0",
+    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.4.0",
-    "babel-jest": "^29.4.2",
     "babel-loader": "^9.1.0",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
